--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />
 
     <Button
-        android:background="@drawable/round_corner"
+        android:background="@drawable/rounded_button_corner"
         android:backgroundTint="@color/buttonBackground"
         android:textColor="@color/buttonText"
         android:id="@+id/btnLogin"
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />
 
     <Button
-        android:background="@drawable/round_corner"
+        android:background="@drawable/rounded_button_corner"
         android:backgroundTint="@color/buttonBackground"
         android:textColor="@color/buttonText"
         android:id="@+id/btnLoginCancel"
