--- a/app/src/main/res/layout/category_row.xml
+++ b/app/src/main/res/layout/category_row.xml
@@ -5,11 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/categoryName"
-    android:layout_width="200sp"
+    android:layout_width="match_parent"
+    android:layout_weight="1"
     android:layout_height="200sp"
     android:layout_margin="10dp"
     android:background="@drawable/rounded_corner"
     android:text="TextView"
+    android:textColor="@color/colorPrimaryDark"
     android:textSize="25sp"
     app:fontFamily="@font/aguafina_script"
     android:gravity="center"
