--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#263238</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="buttonBackground">#263238</color>
-    <color name="buttonText">#FFF</color>
+    <color name="buttonText">#FFFFFF</color>
+    <color name="random">#161A3A</color>
 
 </resources>
