--- a/app/src/main/res/layout/category_row.xml
+++ b/app/src/main/res/layout/category_row.xml
@@ -6,14 +6,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/categoryName"
     android:layout_width="match_parent"
-    android:layout_height="200sp"
+    android:layout_height="100sp"
     android:layout_margin="10dp"
     android:layout_weight="1"
     android:background="@drawable/rounded_corner"
+    android:backgroundTint="@color/random2"
     android:gravity="center"
     android:text="TextView"
-    android:textColor="@color/colorPrimaryDark"
+    android:textColor="@color/buttonText"
     android:textSize="25sp"
+    android:textStyle="bold|italic"
     app:fontFamily="casual"
     tools:layout_editor_absoluteX="10dp"
     tools:layout_editor_absoluteY="10dp" />
